fix: rename playwright service
Signed-off-by: Carlos Feria <2582866+carlosthe19916@users.noreply.github.com>

--- a/devcontainer/github.com/guacsec/trustify-ui/.devcontainer/playwright/devcontainer.json
+++ b/devcontainer/github.com/guacsec/trustify-ui/.devcontainer/playwright/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "trustify-e2e",
   "dockerComposeFile": "./docker-compose.yml",
-  "service": "playwright",
+  "service": "trustify-playwright",
   "workspaceFolder": "/workspace/e2e",
   "remoteUser": "pwuser",
   "forwardPorts": [
