--- a/devcontainer/github.com/guacsec/trustify-ui/.devcontainer/playwright/docker-compose.yml
+++ b/devcontainer/github.com/guacsec/trustify-ui/.devcontainer/playwright/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  playwright:
+  trustify-playwright:
     image: localhost/devcontainer-trustify-e2e:latest
     build:
       dockerfile: ./Dockerfile
